# synergy -- mouse and keyboard sharing utility
# Copyright (C) 2002 Chris Schoeneman
# 
# This package is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# found in the file COPYING that should have accompanied this file.
# 
# This package is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

## Process this file with automake to produce Makefile.in
NULL =

EXTRA_DIST =						\
	PORTING							\
	doxygen.cfg.in					\
	synergy.css						\
	about.html						\
	authors.html					\
	autostart.html					\
	banner.html						\
	border.html						\
	compiling.html					\
	configuration.html				\
	contact.html					\
	developer.html					\
	faq.html						\
	history.html					\
	home.html						\
	index.html						\
	license.html					\
	news.html						\
	roadmap.html					\
	running.html					\
	security.html					\
	tips.html						\
	toc.html						\
	trouble.html					\
	images/logo.gif					\
	images/warp.gif					\
	$(NULL)

MAINTAINERCLEANFILES =				\
	Makefile.in						\
	doc/doxygen.cfg					\
	doc/doxygen/html/*				\
	$(NULL)
