## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libhttp.a
libhttp_a_SOURCES = 		\
	CHTTPProtocol.cpp		\
	XHTTP.cpp				\
	CHTTPProtocol.h			\
	XHTTP.h					\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	-I$(DEPTH)/io	 		\
	$(NULL)
