## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libio.a
libio_a_SOURCES = 			\
	CBufferedInputStream.cpp	\
	CBufferedOutputStream.cpp	\
	CInputStreamFilter.cpp	\
	COutputStreamFilter.cpp	\
	CStreamBuffer.cpp		\
	XIO.cpp					\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	$(NULL)
