## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..
VDEPTH = ./$(VPATH)/$(DEPTH)

SUBDIRS =					\
	base					\
	mt						\
	io						\
	http					\
	net						\
	synergy 				\
	platform				\
	client					\
	server					\
	$(NULL)

EXTRA_DIST =				\
	$(NULL)

MAINTAINERCLEANFILES =		\
	Makefile.in				\
	$(NULL)
