## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libmt.a
libmt_a_SOURCES = 			\
	CLock.cpp				\
	CMutex.cpp				\
	CCondVar.cpp			\
	CThread.cpp				\
	CThreadRep.cpp			\
	CTimerThread.cpp		\
	CCondVar.h				\
	CLock.h					\
	CMutex.h				\
	CThread.h				\
	CThreadRep.h			\
	CTimerThread.h			\
	XThread.h				\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	$(NULL)
