## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libnet.a
libnet_a_SOURCES = 			\
	CNetwork.cpp			\
	CNetworkAddress.cpp		\
	CTCPSocket.cpp			\
	CTCPListenSocket.cpp	\
	XNetwork.cpp			\
	XSocket.cpp				\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	-I$(DEPTH)/io	 		\
	$(NULL)
