## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libplatform.a
libplatform_a_SOURCES = 	\
	CPlatform.cpp			\
	CXWindowsClipboard.cpp	\
	CXWindowsScreen.cpp		\
	CXWindowsUtil.cpp		\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	-I$(DEPTH)/synergy 		\
	$(NULL)
