[project]
name = "scripts"
version = "0.0.1"
description = "Scripts to assist with development of Synergy"
requires-python = ">=3.9"
dependencies = [
  "cmake_format",
  "clang-format",
  "python-dotenv",
  "pyyaml",
  "dmgbuild; sys_platform == 'darwin'",
  "aqtinstall; sys_platform == 'win32' or sys_platform == 'darwin'",
  "colorama",
  "meson",
  "requests",
]
