## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libsynergy.a
libsynergy_a_SOURCES = 		\
	CInputPacketStream.cpp	\
	COutputPacketStream.cpp	\
	CProtocolUtil.cpp		\
	CClipboard.cpp			\
	CTCPSocketFactory.cpp	\
	XScreen.cpp				\
	XSynergy.cpp			\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	-I$(DEPTH)/io	 		\
	-I$(DEPTH)/net	 		\
	$(NULL)
