## Process this file with automake to produce Makefile.in
NULL =
DEPTH = ..

noinst_LIBRARIES = libsynergy.a
libsynergy_a_SOURCES = 		\
	CInputPacketStream.cpp	\
	COutputPacketStream.cpp	\
	CProtocolUtil.cpp		\
	CClipboard.cpp			\
	CTCPSocketFactory.cpp	\
	XScreen.cpp				\
	XSynergy.cpp			\
	CClipboard.h			\
	CInputPacketStream.h	\
	COutputPacketStream.h	\
	CProtocolUtil.h			\
	CTCPSocketFactory.h		\
	ClipboardTypes.h		\
	IClipboard.h			\
	IPrimaryScreen.h		\
	IScreenSaver.h			\
	ISecondaryScreen.h		\
	IServerProtocol.h		\
	ISocketFactory.h		\
	KeyTypes.h				\
	MouseTypes.h			\
	ProtocolTypes.h			\
	Version.h				\
	XScreen.h				\
	XSynergy.h				\
	$(NULL)
INCLUDES =					\
	-I$(DEPTH)/base 		\
	-I$(DEPTH)/mt	 		\
	-I$(DEPTH)/io	 		\
	-I$(DEPTH)/net	 		\
	$(NULL)
